--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@ngxs/devtools-plugin": "^3.6.2",
+    "@ngxs/logger-plugin": "^3.6.2",
+    "@ngxs/store": "^3.6.2",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "json-server": "^0.16.1",
     "rxjs": "~6.4.0",
